# nice-engine-cpp

./: .gitmodules  CMakeLists.txt  README.md
examples/sandbox/: CMakeLists.txt  main.cpp
include/: nice-engine.h
lib/util/include/: util.h
lib/util/include/util/: util.h
lib/util/src/: hash.h  iter.h  opt.h  result.h  set.h  str.h  typedefs.h  vec.h
lib/vk/: CMakeLists.txt
lib/vk/include/: vk.h
lib/vk/src/: device.cpp  device.h  instance.cpp  instance.h  physical-device.cpp  physical-device.h  version.cpp  version.h  vk.cpp  vk.h
src/: main.cpp  nice-engine.cpp  nice-engine.h
src/gfx/: gfx.cpp  gfx.h  window.cpp  window.h
